--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@ button { padding: 10px 20px; font-size: 16px; cursor: pointer; }
 #addMemberSection input[type="text"], #addMemberSection input[type="password"] { width: calc(100% - 22px); padding: 8px; margin-bottom: 10px; border: 1px solid #ccc; }
 .attendance-checkbox { transform: scale(1.5); }
 #instrumentSection { margin-bottom: 20px; text-align: center; }
-#attendanceSection { display: none; }
+#attendanceSection { display: none; position: relative; /* 相対配置の基準にする */ }
+.back-button-container { position: absolute; top: 10px; left: 10px; text-align: left; margin-bottom: 10px; } /* 戻るボタン用のコンテナ */
+.back-button-container button { padding: 8px 15px; font-size: 14px; } /* 戻るボタンのスタイル調整 */
 .member-item { display: flex; justify-content: space-between; align-items: center; margin-bottom: 5px; }
 .member-item button { margin-left: 10px; }
 .edit-input { width: calc(60% - 20px); padding: 8px; border: 1px solid #ccc; }
 #memberList { margin-bottom: 15px; }
 #memberList li { margin-bottom: 8px; }
-#absentMemberListSection { text-align: left; margin-top: 20px; padding: 10px; border: 1px solid #ddd; border-radius: 5px; } /* 欠席者リストセクション */
-#absentMemberList { list-style-type: none; padding-left: 0; } /* 欠席者リスト */
-#absentMemberList li { margin-bottom: 5px; } /* 欠席者リスト項目 */
+#absentMemberListSection { text-align: left; margin-top: 20px; padding: 10px; border: 1px solid #ddd; border-radius: 5px; }
+#absentMemberList { list-style-type: none; padding-left: 0; }
+#absentMemberList li { margin-bottom: 5px; }
 </style>
 </head>
 <body>
@@ -57,8 +59,7 @@ button { padding: 10px 20px; font-size: 16px; cursor: pointer; }
 </div>
 
 <div id="attendanceSection">
-
-    <div class="button-container">
+    <div class="back-button-container">
         <button onclick="goToInstrumentSection()">楽器選択に戻る</button>
     </div>
 
@@ -134,7 +135,7 @@ function selectInstrument() {
         document.getElementById('instrumentSection').style.display = 'none';
         document.getElementById('attendanceSection').style.display = 'block';
         initializeAttendancePage();
-        updateAbsentMemberList(); // 楽器選択後に欠席者リストを更新
+        updateAbsentMemberList();
     } else {
         alert('楽器を選択してください。');
     }
@@ -143,7 +144,7 @@ function selectInstrument() {
 function goToInstrumentSection() {
     document.getElementById('instrumentSection').style.display = 'block';
     document.getElementById('attendanceSection').style.display = 'none';
-    updateAbsentMemberList(); // 楽器選択画面に戻るときにも欠席者リストを更新 (最新の情報にするため)
+    updateAbsentMemberList();
 }
 
 
@@ -368,7 +369,7 @@ function updateAttendance() {
         return { present: isPresent };
     });
     saveAttendance();
-    updateAbsentMemberList(); // 出席更新後に欠席者リストを更新
+    updateAbsentMemberList();
     alert('出欠状況を更新しました。');
 }
 
@@ -387,13 +388,13 @@ function getFormattedDate() {
 
 function updateAbsentMemberList() {
     const absentMemberListUl = document.getElementById('absentMemberList');
-    absentMemberListUl.innerHTML = ''; // リストをクリア
+    absentMemberListUl.innerHTML = '';
     let absentMembers = [];
 
-    loadAttendance(); // 最新の出欠データをロード (念のため)
+    loadAttendance();
 
     members.forEach((memberName, index) => {
-        if (attendanceData[index] && attendanceData[index].present === false) { // 欠席の場合
+        if (attendanceData[index] && attendanceData[index].present === false) {
             absentMembers.push(memberName);
         }
     });
@@ -404,9 +405,9 @@ function updateAbsentMemberList() {
             listItem.textContent = memberName;
             absentMemberListUl.appendChild(listItem);
         });
-        document.getElementById('absentMemberListSection').style.display = 'block'; // 欠席者がいる場合のみセクションを表示
+        document.getElementById('absentMemberListSection').style.display = 'block';
     } else {
-        document.getElementById('absentMemberListSection').style.display = 'none'; // 欠席者がいない場合はセクションを非表示
+        document.getElementById('absentMemberListSection').style.display = 'none';
     }
 }
 
