--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ button { padding: 10px 20px; font-size: 16px; cursor: pointer; }
 #addMemberSection input[type="text"], #addMemberSection input[type="password"] { width: calc(100% - 22px); padding: 8px; margin-bottom: 10px; border: 1px solid #ccc; }
 .attendance-checkbox { transform: scale(1.5); }
 #instrumentSection { margin-bottom: 20px; text-align: center; }
-#attendanceSection { display: none; position: relative; /* 相対配置の基準にする */ }
-.back-button-container { position: absolute; top: 10px; left: 10px; text-align: left; margin-bottom: 10px; } /* 戻るボタン用のコンテナ */
-.back-button-container button { padding: 8px 15px; font-size: 14px; } /* 戻るボタンのスタイル調整 */
+#attendanceSection { display: none; position: relative; }
+.back-button-container { position: absolute; top: 10px; left: 10px; text-align: left; margin-bottom: 10px; }
+.back-button-container button { padding: 8px 15px; font-size: 14px; }
 .member-item { display: flex; justify-content: space-between; align-items: center; margin-bottom: 5px; }
 .member-item button { margin-left: 10px; }
 .edit-input { width: calc(60% - 20px); padding: 8px; border: 1px solid #ccc; }
@@ -27,6 +27,7 @@ button { padding: 10px 20px; font-size: 16px; cursor: pointer; }
 #absentMemberListSection { text-align: left; margin-top: 20px; padding: 10px; border: 1px solid #ddd; border-radius: 5px; }
 #absentMemberList { list-style-type: none; padding-left: 0; }
 #absentMemberList li { margin-bottom: 5px; }
+.instrument-label { display: inline-block; width: 60px; text-align: right; margin-right: 10px; } /* 楽器名ラベル用 */
 </style>
 </head>
 <body>
@@ -68,7 +69,14 @@ button { padding: 10px 20px; font-size: 16px; cursor: pointer; }
         <input type="password" id="adminPassword" placeholder="管理者パスワード">
         <button onclick="checkAdminPassword()">認証</button>
         <div id="addMemberForm" style="display: none;">
-            <input type="text" id="newMemberName" placeholder="新しいメンバー名">
+            <div class="input-group">
+                <label for="newMemberInstrument" class="instrument-label">楽器:</label>
+                <input type="text" id="newMemberInstrument" placeholder="楽器名">
+            </div>
+            <div class="input-group">
+                <label for="newMemberName" class="instrument-label">名前:</label>
+                <input type="text" id="newMemberName" placeholder="新しいメンバー名">
+            </div>
             <button onclick="addMember()">メンバー追加</button>
             <ul id="memberList"></ul>
             <button onclick="saveMembers()">メンバーリストを保存</button>
@@ -79,7 +87,7 @@ button { padding: 10px 20px; font-size: 16px; cursor: pointer; }
         <button onclick="toggleAddMemberSection()">メンバー追加・編集</button>
     </div>
 
-    <h2>出欠状況 (本日: <span id="todayDate"></span>)</h2>
+    <h2>出欠状況 (本日: <span id="todayDate"></span>)  - <span id="selectedInstrumentDisplay"></span></h2>
 
     <table id="attendanceTable">
         <thead>
@@ -116,6 +124,12 @@ function initializeAttendancePage() {
     loadMembers();
     loadAttendance();
     renderAttendanceTable();
+    updateInstrumentDisplay(); // 楽器名表示を更新
+}
+
+function updateInstrumentDisplay() {
+    const instrumentDisplaySpan = document.getElementById('selectedInstrumentDisplay');
+    instrumentDisplaySpan.textContent = `(${selectedInstrument})`; // 選択された楽器名を表示
 }
 
 
@@ -184,7 +198,12 @@ function loadMembers() {
     if (storedMembers) {
         members = JSON.parse(storedMembers);
     } else {
-        members = [];
+        members = [  // 初期メンバーリストを更新 - 楽器情報を含む
+            { name: "メンバー1", instrument: "フルート" },
+            { name: "メンバー2", instrument: "フルート" },
+            { name: "メンバー3", instrument: "チューバ" },
+            { name: "メンバー4", instrument: "チューバ" }
+        ];
         saveMembers();
     }
 }
@@ -204,34 +223,70 @@ function loadMemberList() {
         const listItem = document.createElement('li');
         listItem.classList.add('member-item');
 
+        // 楽器名表示・編集
+        let memberInstrumentSpan = document.createElement('span');
+        memberInstrumentSpan.textContent = `楽器: ${member.instrument}`; // 楽器名を表示
+        let editInstrumentInput = document.createElement('input');
+        editInstrumentInput.type = 'text';
+        editInstrumentInput.value = member.instrument;
+        editInstrumentInput.className = 'edit-input';
+        editInstrumentInput.style.display = 'none';
+
+
+        // メンバー名表示・編集 (既存部分)
+        let memberNameSpan = document.createElement('span');
+        memberNameSpan.textContent = `名前: ${member.name}`; // 名前を表示
         let editInput = document.createElement('input');
         editInput.type = 'text';
-        editInput.value = member;
+        editInput.value = member.name;
         editInput.className = 'edit-input';
         editInput.style.display = 'none';
 
-        let memberNameSpan = document.createElement('span');
-        memberNameSpan.textContent = member;
 
         let editButton = document.createElement('button');
         editButton.textContent = '編集';
         editButton.onclick = function() {
             memberNameSpan.style.display = 'none';
             editInput.style.display = 'inline-block';
+            memberInstrumentSpan.style.display = 'none'; // 楽器名も非表示
+            editInstrumentInput.style.display = 'inline-block'; // 楽器編集フィールドを表示
+
             editInput.focus();
         };
 
         editInput.addEventListener('blur', function() {
-            saveEdit(index, editInput.value);
+            saveEdit(index, editInput.value, editInstrumentInput.value); // saveEditに楽器名も渡す
             memberNameSpan.style.display = 'inline-block';
             editInput.style.display = 'none';
+            memberInstrumentSpan.style.display = 'inline-block'; // 楽器名再表示
+            editInstrumentInput.style.display = 'none'; // 楽器編集フィールド非表示
         });
 
         editInput.addEventListener('keydown', function(event) {
             if (event.key === 'Enter') {
-                saveEdit(index, editInput.value);
+                saveEdit(index, editInput.value,  editInstrumentInput.value); // saveEditに楽器名も渡す
                 memberNameSpan.style.display = 'inline-block';
                 editInput.style.display = 'none';
+                memberInstrumentSpan.style.display = 'inline-block'; // 楽器名再表示
+                editInstrumentInput.style.display = 'none'; // 楽器編集フィールド非表示
+            }
+        });
+
+        editInstrumentInput.addEventListener('blur', function() { // 楽器編集フィールドのblurイベント
+             saveEdit(index, editInput.value, editInstrumentInput.value); // saveEditに楽器名も渡す
+            memberInstrumentSpan.style.display = 'inline-block';
+            editInstrumentInput.style.display = 'none';
+            memberNameSpan.style.display = 'inline-block'; // メンバー名再表示
+            editInput.style.display = 'none'; // メンバー名編集フィールド非表示
+        });
+
+        editInstrumentInput.addEventListener('keydown', function(event) { // 楽器編集フィールドのkeydownイベント
+            if (event.key === 'Enter') {
+                 saveEdit(index, editInput.value,  editInstrumentInput.value); // saveEditに楽器名も渡す
+                memberInstrumentSpan.style.display = 'inline-block';
+                editInstrumentInput.style.display = 'none';
+                memberNameSpan.style.display = 'inline-block'; // メンバー名再表示
+                editInput.style.display = 'none'; // メンバー名編集フィールド非表示
             }
         });
 
@@ -242,26 +297,28 @@ function loadMemberList() {
 
         listItem.appendChild(memberNameSpan);
         listItem.appendChild(editInput);
+        listItem.appendChild(memberInstrumentSpan); // 楽器名表示
+        listItem.appendChild(editInstrumentInput); // 楽器名編集フィールド
         listItem.appendChild(deleteButton);
         memberListUl.appendChild(listItem);
     });
 }
 
-function saveEdit(index, newName) {
+function saveEdit(index, newName, newInstrument) { // 引数にnewInstrumentを追加
     if (!adminMode) {
         alert('管理者モードでのみ編集可能です。');
         return;
     }
-    if (newName.trim() && !members.includes(newName.trim())) {
-        members[index] = newName.trim();
+    if (newName.trim() && newInstrument.trim() && !members.some((m, i) => m.name === newName.trim() && i !== index )) {
+        members[index] = { name: newName.trim(), instrument: newInstrument.trim() }; // 楽器名も保存
         saveMembers();
         loadMemberList();
         renderAttendanceTable();
-        alert('メンバー名を変更しました。');
-    } else if (!newName.trim()) {
-        alert('メンバー名を入力してください。');
+        alert('メンバー情報を変更しました。'); // メッセージを更新
+    } else if (!newName.trim() || !newInstrument.trim()) {
+        alert('メンバー名と楽器名を入力してください。'); // アラートメッセージを修正
         loadMemberList();
-    } else if (members.includes(newName.trim())) {
+    } else if (members.some((m, i) => m.name === newName.trim() && i !== index )) {
         alert('そのメンバー名は既に登録されています。');
         loadMemberList();
     }
@@ -274,17 +331,24 @@ function addMember() {
         return;
     }
     const newMemberNameInput = document.getElementById('newMemberName');
+    const newMemberInstrumentInput = document.getElementById('newMemberInstrument'); // 楽器名入力欄を取得
     const newMemberName = newMemberNameInput.value.trim();
-    if (newMemberName && !members.includes(newMemberName)) {
-        members.push(newMemberName);
+    const newMemberInstrument = newMemberInstrumentInput.value.trim(); // 楽器名を取得
+
+    if (newMemberName && newMemberInstrument && !members.some(m => m.name === newMemberName)) { // 楽器名が空でないこともチェック
+        members.push({ name: newMemberName, instrument: newMemberInstrument }); // メンバーオブジェクトに楽器名も追加
         newMemberNameInput.value = '';
+        newMemberInstrumentInput.value = ''; // 楽器名入力欄もクリア
         saveMembers();
         loadMemberList();
         renderAttendanceTable();
-        alert(newMemberName + ' さんを追加しました。');
+        alert(newMemberName + ' さんを' + newMemberInstrument + 'パートとして追加しました。'); // メッセージを更新
     } else if (!newMemberName) {
         alert('メンバー名を入力してください。');
-    } else {
+    } else if (!newMemberInstrument) { // 楽器名が空の場合のアラート
+        alert('楽器名を入力してください。');
+    }
+     else if (members.some(m => m.name === newMemberName)) {
         alert('そのメンバーは既に登録されています。');
     }
 }
@@ -294,7 +358,7 @@ function deleteMember(index) {
         alert('管理者モードでのみメンバー削除が可能です。');
         return;
     }
-    if (confirm(members[index] + ' さんを削除してもよろしいですか？')) {
+    if (confirm(members[index].name + ' さんを削除してもよろしいですか？')) { // メンバー名を表示するように修正
         members.splice(index, 1);
         saveMembers();
         loadMemberList();
@@ -329,28 +393,33 @@ function renderAttendanceTable() {
     const tableBody = document.getElementById('attendanceTableBody');
     tableBody.innerHTML = '';
 
-    members.forEach((member, index) => {
+    const filteredMembers = members.filter(member => member.instrument === selectedInstrument); // 楽器でメンバーをフィルタリング
+
+    filteredMembers.forEach((member, index) => { // フィルタリングされたメンバーでループ
         const row = tableBody.insertRow();
         const nameCell = row.insertCell(0);
         const presentCell = row.insertCell(1);
         const absentCell = row.insertCell(2);
 
-        nameCell.textContent = member;
+        nameCell.textContent = member.name; // メンバーオブジェクトから名前を取得
 
         const presentRadio = document.createElement('input');
         presentRadio.type = 'radio';
-        presentRadio.name = `attendance_${index}`;
+        presentRadio.name = `attendance_${index}`; // indexはfilteredMembersのindex
         presentRadio.value = 'present';
         presentRadio.classList.add('attendance-checkbox');
-        presentRadio.checked = attendanceData[index]?.present === true;
+
+        // attendanceDataは元のmembers配列に基づいているため、indexを調整
+        const originalIndex = members.findIndex(m => m.name === member.name && m.instrument === member.instrument);
+        presentRadio.checked = attendanceData[originalIndex]?.present === true; // originalIndexを使用
         presentCell.appendChild(presentRadio);
 
         const absentRadio = document.createElement('input');
         absentRadio.type = 'radio';
-        absentRadio.name = `attendance_${index}`;
+        absentRadio.name = `attendance_${index}`; // indexはfilteredMembersのindex
         absentRadio.value = 'absent';
         absentRadio.classList.add('attendance-checkbox');
-        absentRadio.checked = attendanceData[index]?.present === false;
+        absentRadio.checked = attendanceData[originalIndex]?.present === false; // originalIndexを使用
         absentCell.appendChild(absentRadio);
     });
 }
@@ -358,8 +427,9 @@ function renderAttendanceTable() {
 
 function updateAttendance() {
     const today = getFormattedDate();
-    attendanceData = members.map((member, index) => {
-        const radioNodes = document.querySelectorAll(`input[name="attendance_${index}"]`);
+    const filteredMembers = members.filter(member => member.instrument === selectedInstrument); // フィルタリングされたメンバーリストを取得
+    const updatedAttendanceData = filteredMembers.map((member, index) => { // フィルタリングされたメンバーリストに基づいて出欠データを生成
+        const radioNodes = document.querySelectorAll(`input[name="attendance_${index}"]`); // name属性はfilteredMembersのindexに基づいている
         let isPresent = false;
         radioNodes.forEach(radio => {
             if (radio.value === 'present' && radio.checked) {
@@ -368,10 +438,21 @@ function updateAttendance() {
         });
         return { present: isPresent };
     });
+
+    // 元のattendanceDataを更新 - filteredMembersに基づいて、対応するメンバーの出欠データを更新
+    filteredMembers.forEach((member, index) => {
+        const originalIndex = members.findIndex(m => m.name === member.name && m.instrument === member.instrument);
+        if (originalIndex !== -1) {
+            attendanceData[originalIndex] = updatedAttendanceData[index]; // originalIndexを使用して更新
+        }
+    });
+
+
     saveAttendance();
     updateAbsentMemberList();
     alert('出欠状況を更新しました。');
 }
+
 
 function saveAttendance() {
     const today = getFormattedDate();
@@ -393,9 +474,9 @@ function updateAbsentMemberList() {
 
     loadAttendance();
 
-    members.forEach((memberName, index) => {
+    members.forEach((member, index) => {
         if (attendanceData[index] && attendanceData[index].present === false) {
-            absentMembers.push(memberName);
+            absentMembers.push(member.name); // メンバーオブジェクトから名前を取得
         }
     });
 
